--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,7 @@
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;     /* Firefox */
 }  
+
+.text-stroke {
+  -webkit-text-stroke: 2px black;
+}
